stack/observability/prometheus/operator-usage/federation/federation.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-federation
  labels:
    app.kubernetes.io/name: prometheus-federation
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      targetPort: 9090
    - name: grpc
      port: 10901
      targetPort: 10901
  selector:
    app.kubernetes.io/name: prometheus-federation
