stack/observability/prometheus/operator-usage/federation/istio-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: istio-federation
spec:
  egress:
    - hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
  workloadSelector:
    labels:
      app.kubernetes.io/name: prometheus-federation
